--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "react-simple-animate": "^3.3.12",
+    "react-simple-animate": "^3.3.12", // check for a newer version
     "react-tsparticles": "^2.0.6",
     "react-vertical-timeline-component": "^3.5.2",
     "sass": "^1.50.1",
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build --legacy-peer-deps",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
