--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,6 @@ d/eployment/Iac_terraform/.terraform.lock.hcl
 /deployment/Iac_terraform/Thumbs.db
 /deployment/Iac_terraform/.terraform
 /deployment/Iac_terraform/lateral-berm.json
+/deployment/Iac_terraform/terraform.tfstate
+/deployment/Iac_terraform/terraform.tfstate.backup
+/deployment/Iac_terraform/.terraform.lock.hcl
