--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,5 @@ d/eployment/Iac_terraform/.terraform.lock.hcl
 /deployment/Iac_terraform/terraform.tfstate
 /deployment/Iac_terraform/terraform.tfstate.backup
 /deployment/Iac_terraform/.terraform.lock.hcl
+/~WRL2076.tmp
+/~$e_usecase_test.docx
